<resources>
    <string name="app_name">Trip Planner</string>
    <string name="arrivo">Arrivo</string>
    <string name="plan_your_perfect_trip">Plan Your Perfect Trip</string>
    <string name="arrivo_helps_you_design_unforgettable_journeys_with_ease_choose_your_destination_set_your_dates_and_the_app_guides_you_with_recommendations_for_hotels_restaurants_attractions_and_local_activities_whether_you_re_planning_ahead_or_exploring_a_place_you_re_already_in_arrivo_suggests_the_best_spots_and_even_offers_ready_made_trip_ideas_to_inspire_your_next_adventure">Arrivo helps you design unforgettable journeys with ease. Choose your destination, set your dates, and the app guides you with recommendations for hotels, restaurants, attractions, and local activities. Whether you\'re planning ahead or exploring a place you\'re already in, Arrivo suggests the best spots and even offers ready-made trip ideas to inspire your next adventure.</string>
    <string name="get_started">Get Started</string>
    <string name="arriv">Arrivo</string>
    <string name="login_text">
        <font color="#48382D">Already have an account? </font>
        <font color="#936247">Login Here</font>

</string>
    <string name="sign_up">Sign Up</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="pass_hint">••••••••••••••••••••</string>
    <string name="password">Password</string>
    <string name="loremipsumdolor_gmail_com">Loremipsumdolor@gmail.com</string>
    <string name="email">Email</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="signup_text">
        <font color="#48382D">Not a member? </font>
        <font color="#936247">Register now</font>
    </string>
    <string name="destination">Destination</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="start_date">Start Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="end_date">End Date</string>
    <string name="events">Events</string>
    <string name="add_event">Add Event</string>
    <string name="save_changes">Save Changes</string>
    <string name="where_are_you_headed">Where are you headed?</string>
    <string name="logout">Logout</string>
    <string name="my_trips">My Trips</string>
    <string name="explore_trips">Explore Trips</string>
    <string name="see_all">See All</string>
    <string name="start_my_trip">Start My Trip</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="eventss">Events:</string>
    <string name="extra_guide">Extra Guide:</string>
    <string name="trip_guide">Trip Guide</string>
    <string name="know_before_you_go_everything_about_your_next_destination_explore_any_city">Know before you go ,everything about your next destination ,Explore any city.</string>
    <string name="explore">Explore</string>
    <string name="plan_your_trip">Plan Your Trip</string>
    <string name="where_to_next_your_adventure_begins_here_plan_it_your_way">Where to next? Your adventure begins here, Plan it your way.</string>
    <string name="start_planning">Start Planning</string>
    <string name="tokyo">Tokyo</string>
</resources>